--- a/src/components/categories/categories.scss
+++ b/src/components/categories/categories.scss
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Vidaloka&display=swap');
 
 .carousel.slide {
 width: 100%;
@@ -56,7 +56,7 @@ display: grid;
 }
   .text {
     color: #000000;
-    font-family: 'Roboto Condensed';
+    font-family: 'Vidaloka', serif;
     font-size: 22px;
     letter-spacing: 8px;
     line-height: 32px;
@@ -68,7 +68,7 @@ display: grid;
 }
 .text-white {
     justify-content: center;
-    margin: 10%5%;
+    // margin: 10%5%;
 }
 .black{
     color: black;
@@ -78,12 +78,12 @@ display: grid;
     // font-size: larger;
     font-weight: 900;
     font-size: xx-large;
-    color: #fff;
+    color: black;
 }
 .black h6 strong{
     font-family: 'Kaushan Script', cursive;
     font-size: larger;
-    color: #fff;
+    color: black;
 }
 .col-md-12.mb-4 {
     padding: 0;
@@ -98,7 +98,7 @@ div#root {
     width: 126%;
     font-size: 0;
     height: 0;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid black;
 }
   @keyframes draw {
     0% {
@@ -141,4 +141,10 @@ div#root {
     margin: 0;
     background-color: #10101052;
     height: 100%;
+}
+.col-md-12.mb-4{
+  background-image: url(https://cdn11.bigcommerce.com/s-fcn1lgnyqp/stencil/535737d0-2953-0136-9c41-525400dfdca6/e/636f37e0-f70b-0135-4977-525400970412/img/heading-brush.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 0;
 }
