--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -265,3 +265,9 @@ nav.header.navbar.navbar-expand-lg.navbar-light.bg-light {
   background-color: #080808cf;
   
 }
+.dropdown {
+    margin-right: 2%;
+}
+span.navbar-brand {
+  margin-left: 2%;
+}
