--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -20,16 +20,19 @@
     display: grid;
     padding: 20px;
     transform: translate(0%, -50%);
-    width: 70%;
+    width: 60%;
     margin: auto;
-    background-color: #dbe1e4de;
+    background-color: #080707bd;
     border-left: solid 20px transparent; 
     border-right: solid 20px transparent; 
     // border-bottom: solid 20px #fff;
     box-shadow: 0 -18px 9px -1px #6c6c6c8c;
+    border-radius: 1rem;
 }
 
-
+.marginMin{
+    margin-top: -5%;
+}
 
 .imgAvatar{
     // padding: 20px;
@@ -38,16 +41,18 @@
     margin: auto;    
 }
 
-h3{
+.avatar h3{
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.5vw;
     font-weight: 400;
+    color: white;
 }
 
 .headerProfile .posts , .headerProfile .following , .headerProfile .followers{
     text-align: center;
     margin-top: 10%;
+    color: white;
 
 }
 .headerProfile{
