--- a/src/components/chat/chattest.scss
+++ b/src/components/chat/chattest.scss
@@ -261,7 +261,7 @@
     top: 10px;
     left: -20px;
     border: 10px solid;
-    border-color: transparent #ffffff transparent transparent;
+    border-color: transparent #d0c9c9 transparent transparent;
 }
 
 .chat-container li.chat-right > .chat-text {
@@ -270,7 +270,7 @@
 
 .chat-container li.chat-right > .chat-text:before {
     right: -20px;
-    border-color: transparent transparent transparent #ffffff;
+    border-color: transparent transparent transparent #d0c9c9;
     left: inherit;
 }
 
@@ -387,4 +387,51 @@ height: auto;
     margin-right: 8%;
     margin-top: 3%;
     margin-bottom: 3%;
+}
+.chat-container li .chat-text {
+    background: #d0c9c9;
+    line-height: 170%;
+    height: 7vh;
+}
+.chat-container li .chat-text:before{
+    border-color: transparent #d0c9c9 transparent transparent;
+}
+.col-xl-8.col-lg-8.col-md-8.col-sm-9.col-9{
+    // width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: rotate(180deg);
+    // direction: rtl;
+    // text-align: left;
+    height: 80vh;
+}
+.updown {
+    overflow: hidden;
+    transform: rotate(180deg);
+}
+// .chat-box.chatContainerScroll{
+//     overflow: hidden;
+// transform: rotate(180deg);
+// }
+// .col-xl-8.col-lg-8.col-md-8.col-sm-9.col-9 > .form-group.mt-3.mb-0 > .btn-default.btn.Ripple-parent.fancy-button{
+//     scroll-snap-align: end;
+// }
+
+// .col-xl-8.col-lg-8.col-md-8.col-sm-9.col-9 > .chat-container > .chat-box.chatContainerScroll > li{
+//     // background: lightgray;
+//     // height: 3rem;
+//     // font-size: 1.5rem;
+// }
+.col-xl-4.col-lg-4.col-md-4.col-sm-3.col-3{
+    max-width: 49vh;
+}
+.row{
+    // margin-right: -5%;
+}
+.chatGrid{
+    width: 70%;
+}
+
+.col-xl-8.col-lg-8.col-md-8.col-sm-9.col-9{
+    max-width: initial;
 }
