--- a/src/components/addPost/addPost.css
+++ b/src/components/addPost/addPost.css
@@ -7,8 +7,8 @@
 }
 .gridClass {
   position: absolute;
-  left: 12%;
-  top: 21%;
+  left: 20%;
+  top: 18%;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-rows: repeat(auto-fill, 120px);
@@ -17,4 +17,51 @@
 }
 .gridImages {
   padding: 20px;
+}
+.borderBu {
+  background-color: #00000030;
+}
+textarea.form-control {
+  /* height: auto; */
+  height: 6vw;
+  margin-top: 1vw;
+  margin-bottom: 2vw;
+}
+.custom-select {
+  width: 40%;
+}
+.fileUpload {
+  background: #747474;
+  top: -4.6vw;
+  left: 6vw;
+  border: 1px solid;
+}
+.fileUpload:hover {
+  background: #747474;
+}
+button#signInBt2 {
+  margin-left: 9vw;
+  margin-top: -3vw;
+  width: 6vw;
+  height: 2vw;
+  background-color: #00000087;
+  color: #d9d9d9;
+  border-radius: 10px;
+}
+select#inputGroupSelect01 {
+  background-color: transparent;
+  border-radius: 14px;
+}
+.custom-select {
+  width: 40%;
+  color: #d9d9d9;
+}
+.catOptions {
+  background-color: #747474;
+}
+#uploadSpan {
+  cursor: pointer;
+}
+#uploadSpan :hover {
+  cursor: pointer;
 }
