--- a/src/components/upload/addPost.css
+++ b/src/components/upload/addPost.css
@@ -1,12 +1,12 @@
+@import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css";
 .fileUpload {
-  background: #00bcbe;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
   color: #fff;
   font-size: 1em;
   font-weight: bold;
-  margin: 1.25em auto; /*20px/16px 0*/
+  margin: 1.25em 5.25em auto;
   overflow: hidden;
   padding: 0.875em; /*14px/16px*/
   position: relative;
@@ -17,7 +17,6 @@
 .fileUpload:hover,
 .fileUpload:active,
 .fileUpload:focus {
-  background: #00a2a4;
   cursor: pointer;
 }
 .fileUpload input.upload {
@@ -50,4 +49,36 @@ input[type="file"] {
   position: absolute;
   left: 0;
   top: 19%;
+}
+
+.formStyle {
+  background-color: #353535e0;
+  margin-top: 5vw;
+  margin-bottom: 5vw;
+  margin-right: 12vw;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  padding: 10px;
+}
+.grid-item {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+table.mt-4.table {
+  position: absolute;
+  left: 1em;
+  top: 17%;
+  /* border: 1px black solid; */
+  height: 30em;
+  border: 1px black solid;
+}
+.table {
+  width: 48em;
+}
+#textUp {
+  margin-top: -2em;
+  margin-left: 10em;
 }
