--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -271,3 +271,13 @@ nav.header.navbar.navbar-expand-lg.navbar-light.bg-light {
 span.navbar-brand {
   margin-left: 2%;
 }
+.dropdown  .btn-primary.btn.Ripple-parent.dropdown-toggle.a-tag  span a {
+color: white;
+}
+
+.dropdown.show .show.basic.dropdown-menu  .dropdown-item a{
+  color: #080808cf ;
+}
+.dropdown.show .show.basic.dropdown-menu  .dropdown-item a:hover{
+  color: #2e5a5ccf ;
+}
