--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -96,3 +96,6 @@ i.fa.fa-trash.fa-3x.cyan-text{
 .buttonInText  .btn-default.btn.Ripple-parent.btn-action.ml-auto.mr-4.lighten-3.mdb-coalor.next.mr-4{
     margin-right: 3%;
 }
+.card-cascade.card{
+    width: 240px;
+}
