one product slider

--- a/src/components/oneProduct/slider/slider.scss
+++ b/src/components/oneProduct/slider/slider.scss
@@ -12,6 +12,8 @@
     padding-inline-start: 0;
     // margin-left: 5%;
     margin-top: 2%;
+    height: auto;
+    
   }
 
   section#main {
@@ -20,8 +22,8 @@
 }
 div#thumbs {
     margin: 0 3%;
-    width: 31.25em;
+    // width: 31.25em;
 }
-section.sliderr {
-display: grid;
-}
+// section.sliderr {
+// display: grid;
+// }
