--- a/src/components/oneProduct/oneProduct.scss
+++ b/src/components/oneProduct/oneProduct.scss
@@ -220,6 +220,7 @@ color: #fff;
   font-weight: bold;
   text-decoration: none;
   color: #333;
+  z-index: 999;
 }
 .popup .close:hover {
   color: #06D85F;
