--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -38,7 +38,8 @@
     // padding: 20px;
     transform: translate(0%, -50%);
     // width: 70%;
-    margin: auto;    
+    margin: auto;  
+    border-radius: 50%;  
 }
 
 .avatar h3{
