--- a/src/components/oneCategory/oneCategory.scss
+++ b/src/components/oneCategory/oneCategory.scss
@@ -1,74 +1,59 @@
-.center {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    background: {
-      color: black;
-      image: url(https://images.unsplash.com/photo-1446080501695-8e929f879f2b?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=34658e73aff775c8d4eec54bbfd1c011);
-      repeat: no-repeat;
-      position: center;
-      size: cover;
-    }
-  }
-  
-  .center__text {
-    margin: auto;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 120px;
-    text-transform: uppercase;
-  }
-  
-  .glitch {
-    position: relative;
-    color: white;
-    mix-blend-mode: lighten;
-  
-    &:before,
-    &:after {
-        content: attr(data-text);
-        position: absolute;
-        top: 0;
-        width: 100%;
-        background: black;
-        clip: rect(0, 0, 0, 0);
-    }
-    
-    &:before {
-        left: -1px;
-        text-shadow: 1px 0 rgba(red,0.7);
-    }
-  
-    &:after {
-        left: 1px;
-        text-shadow: -1px 0 rgba(blue,0.7);
-    }
-  
-    &:hover {
-      &:before {
-        text-shadow: 4px 0 rgba(red,0.7);
-        animation: glitch-loop-1 0.8s infinite ease-in-out alternate-reverse;
-      }
-      &:after {
-        text-shadow: -5px 0 rgba(blue,0.7);
-        animation: glitch-loop-2 0.8s infinite ease-in-out alternate-reverse;
-      }
-    }
-  }
-  
-  @keyframes glitch-loop-1 {
-    0% { clip: rect(36px, 9999px, 9px, 0) }
-    25% { clip: rect(25px, 9999px, 99px, 0) }
-    50% { clip: rect(50px, 9999px, 102px, 0) }
-    75% { clip: rect(30px, 9999px, 92px, 0) }
-    100% { clip: rect(91px, 9999px, 98px, 0) }
-  }
-  
-  @keyframes glitch-loop-2 {
-    0% { top: -1px; left: 1px; clip: rect(65px, 9999px, 119px, 0) }
-    25% { top: -6px; left: 4px; clip: rect(79px, 9999px, 19px, 0) }
-    50% { top: -3px; left: 2px; clip: rect(68px, 9999px, 11px, 0) }
-    75% { top: 0px; left: -4px; clip: rect(95px, 9999px, 53px, 0) }
-    100% { top: -1px; left: -1px; clip: rect(31px, 9999px, 149px, 0) }
-  }
-  
-  
+// @import "compass/css3";
+
+
+#hero1{
+//  background:url(https://4.bp.blogspot.com/_AQ0vcRxFu0A/S9shDGGyMTI/AAAAAAAAAYk/kn3WTkY2LoQ/s1600/IMG_0714.JPG);
+  background-size:cover;
+  background-position:center center;
+  background-attachment:fixed;
+  margin-bottom: 5%;
+}
+
+.hero, .content{
+  text-align:center; 
+  position:relative;
+  width: 100%;
+}
+
+.inner{
+  min-height:400px;
+  position: relative;
+}
+
+.hero .inner{
+  background: rgba(0,0,0,0.7) url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAYAAACddGYaAAAAD0lEQVQIW2NkQABjRmQOAAM+AGkQsDBSAAAAAElFTkSuQmCC) repeat;}
+
+
+.copy{
+  position:absolute; 
+  top:50%; 
+  height:10em; 
+  margin-top:-5em; 
+  width:100%;
+  display: flex;
+  justify-content: center;
+}
+
+.hero .headerh1, .hero p{ 
+  color:#fff;
+}
+
+.content h1, .content p{
+  color:#333;
+}
+
+.headerh1{
+  margin:0px;
+  font-family: 'Roboto Slab', serif;
+  font-weight:400;
+  font-size:32px;
+  padding:0px 20px;
+  text-transform: uppercase;
+}
+
+p{
+  font-family: 'Noto Sans', sans-serif; 
+  font-size:14px;
+  padding:0px 20px;
+}
+
