--- a/src/components/adminPage/admin.css
+++ b/src/components/adminPage/admin.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&family=Quicksand:wght@500&display=swap');
 .adminTable {
 }
 .table {
@@ -11,4 +13,13 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+.t-header{
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: bolder;
+  font-size: 25px;
+}
+.table th {
+  padding: 1.7rem;
+  font-family: 'Quicksand', sans-serif;
 }
