--- a/src/components/categories/categories.scss
+++ b/src/components/categories/categories.scss
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Vidaloka&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Mate+SC&display=swap');
 .carousel.slide {
 width: 100%;
 }
@@ -32,7 +32,7 @@ width: 100%;
 }
 .w-100 {
     height: 80vh;
-    object-fit: fill;
+    object-fit: cover;
 }
 .h-three-para{
 display: grid;
@@ -56,8 +56,7 @@ display: grid;
 }
   .text {
     color: #fffdfde0;
-    font-family: 'Vidaloka', serif;
-    font-size: 22px;
+    font-family: 'Julius Sans One', sans-serif;
     letter-spacing: 8px;
     line-height: 32px;
     position: relative;
