--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@700&display=swap');
+.pFonts{
+    font-family: 'News Cycle', sans-serif;
+    color: white;
+}
+
 .login {
   background-color: #00000087;
   /* opacity: 22%; */
