--- a/src/components/oneProduct/oneProduct.scss
+++ b/src/components/oneProduct/oneProduct.scss
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Adamina&family=Cousine:ital,wght@1,700&family=Kaushan+Script&family=M+PLUS+1p:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Adamina&family=Cormorant:ital,wght@1,500&family=Cousine:ital,wght@1,700&family=Kaushan+Script&family=M+PLUS+1p:wght@700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@700&display=swap');
+.pFonts{
+    // font-family: 'News Cycle', sans-serif;
+    // color: black;
+}
+
 .sliderProduct {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -9,23 +17,26 @@
 }
 .details {
   margin: 4%;
-    font-family: 'Cormorant', serif;
-    font-size: 25px;
+  font-family: 'Quicksand', sans-serif;  
+  font-size: 25px;
 }
 .details h2{
     // text-transform: uppercase;
-    font-family: 'Adamina', serif;
-font-weight: 400;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
 }
 
 .dolar{
     display: flex;
     justify-content: flex-end;
     font-family: 'Adamina', serif;
+    font-size: 20px;
 }
 .user-cat{
     margin: 4% 0 4% 3%;
     display: grid;
+    margin: -9px 0;
+
 }
 .heart{
     display: flex;
@@ -62,7 +73,7 @@ font-weight: 400;
     // padding: 0 1.5rem;
     text-transform: uppercase;
     font-size: 1.25rem;
-    color: #fff;
+    color: rgb(17, 17, 17);
     transition: 200ms ease;
   }
   .fancy-button-text a{
@@ -157,11 +168,12 @@ color: #fff;
   
 }
 .box button a.hoverBtn {
-  color: #808080cf;
+  color: black;
 }
 .box button{
-
-  background-color: #d2ccc3;
+  float: right;
+  margin-top: 0%;
+  background-color: #dbe1e4;
   border-radius: 1rem;
 }
 .box button:hover{
@@ -172,8 +184,9 @@ color: #fff;
   text-decoration: none;
 }
 .oneProductPara{
+  font-family: 'Quicksand', sans-serif;  
   overflow: scroll;
-    height: 27vh;
+  height: 16vh;
 }
 .overlay {
   position: fixed;
